// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatePicker /> by default matches with snapshot 1`] = `
<div
  className="date-picker__StyledDatePicker-snpu98-0 iUOaq"
>
  <div
    className="DayPickerInput"
  >
    <div
      className="text-input-with-unit__StyledTextInputWithUnit-gjmccx-0 llwwax"
    >
      <input
        autoComplete="off"
        className="text-input-with-unit__StyledTextInput-gjmccx-1 dlIRXg text-input__StyledInput-sc-11wej6v-1 iDULaY"
        disabled={false}
        name="text"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        placeholder="dd/mm/yyyy"
        type="text"
        value=""
      />
      <span
        className="text-input-with-unit__StyledInputUnit-gjmccx-2 gbKmhA"
        disabled={false}
      >
        📅
      </span>
    </div>
  </div>
</div>
`;

exports[`<DatePicker /> with custom input matches with snapshot 1`] = `
<div
  className="date-picker__StyledDatePicker-snpu98-0 iUOaq"
>
  <div
    className="DayPickerInput"
  >
    <input
      autoComplete="off"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      placeholder="dd/mm/yyyy"
      type="text"
      value=""
    />
  </div>
</div>
`;
